Readiness/OCP-4.19/Gateway_API/files/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: example-app-ns
spec:
  parentRefs:
  - name: example-gateway
    namespace: openshift-ingress
  hostnames: ["example.gwapi.apps.hackathon-419-cchen.test.dev"]
  rules:
  - backendRefs:
    - name: example-app
      port: 8443
